--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,11 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.kotlin_version = "1.5.20"
+    ext.dagger_version = "2.11"
+    ext.room_version = "2.4.1"
+    ext.retrofit_version = "2.9.0"
+    ext.okhttp_version = "3.14.9"
+    ext.room_version = "2.4.1"
+
     repositories {
         google()
         mavenCentral()
@@ -7,12 +13,19 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.0"
     }
 }
+plugins {
+    id("org.jlleitschuh.gradle.ktlint").version("10.2.0")
+}
+subprojects {
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
+    ktlint {
+        debug = false
+    }
 
+}
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
