--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:name=".App"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/launcher_weather_icon"
         android:label="@string/app_name_ru"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
